--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,6 @@
 /* You can add global styles to this file, and also import other style files */
+* {
+  background-color: rgb(231, 208, 212);
+  position: relative;
+  margin: 0;
+}
