updated old styling

--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -1,8 +1,8 @@
 <div>
-  <h1 className="titles">About Me</h1>
-  <div className="about-div">
+  <h1 class="titles">About Me</h1>
+  <div class="about-div">
     <!-- <img className="profilePic" src={Profile} alt="profile"></img> -->
-    <p className="about-text">
+    <p class="about-text">
       Hello! My name is Karly and I love all things creative! Throughout my
       schooling I never really knew what I wanted to do in life; all I knew was
       I liked creating things. All kinds of things, traditional pen and paper,
