--- a/src/app/hero/hero.component.html
+++ b/src/app/hero/hero.component.html
@@ -1,12 +1,8 @@
-<div className="heroDiv">
-  <!-- <div className='profilePic'>
-        <img 
-        src={Avatar}
-        alt='profile' 
-        key="1"
-        />
-    </div> -->
-  <div className="heroText">
+<div class="heroDiv">
+  <div class="profilePic">
+    <img [src]="profile" alt="profile" />
+  </div>
+  <div class="heroText">
     <h1>Hi, I'm Karly Weatherstein!</h1>
     <p>
       I am a full stack developer excited to take on new projects! Take a look
