--- a/src/app/portfolio/portfolio.component.html
+++ b/src/app/portfolio/portfolio.component.html
@@ -1,13 +1,13 @@
 <div>
-  <h1 className="titles">Portfolio</h1>
+  <h1 class="titles">Portfolio</h1>
   <!-- Run Buddy -->
-  <div className="portfolio">
-    <div className="portfolio-mock">
+  <div class="portfolio">
+    <div class="portfolio-mock">
       <a href="https://karlyweatherstein.github.io/run-buddy/">
         <!-- <img alt="Run-Buddy" src={RunBuddy}></img> -->
       </a>
     </div>
-    <div className="icon">
+    <div class="icon">
       <h2>Run Buddy</h2>
       <a href="https://github.com/Karlyweatherstein/run-buddy">
         <!-- <img src={Github} alt='Github' ></img> -->
@@ -16,13 +16,13 @@
     </div>
   </div>
   <!-- Show Me How  -->
-  <div className="portfolio">
+  <div class="portfolio">
     <div className="portfolio-mock">
       <a href="https://boiling-fjord-93274.herokuapp.com/">
         <!-- <img alt="Show-Me-How" src={ShowMeHow}></img> -->
       </a>
     </div>
-    <div className="icon">
+    <div class="icon">
       <h2>Show Me How</h2>
       <a href="https://github.com/jamesbelk0/Show-Me-How">
         <!-- <img src={Github} alt='Github' ></img> -->
@@ -31,13 +31,13 @@
     </div>
   </div>
   <!-- Password Generator  -->
-  <div className="portfolio">
-    <div className="portfolio-mock">
+  <div class="portfolio">
+    <div class="portfolio-mock">
       <a href="https://karlyweatherstein.github.io/password-generator/">
         <!-- <img alt="Password-Generator" src={PasswordGenerator}></img> -->
       </a>
     </div>
-    <div className="icon">
+    <div class="icon">
       <h2>Password Generator</h2>
       <a href="https://github.com/Karlyweatherstein/password-generator">
         <!-- <img src={Github} alt='Github' ></img> -->
@@ -46,13 +46,13 @@
     </div>
   </div>
   <!-- Best Furrrends  -->
-  <div className="portfolio">
-    <div className="portfolio-mock">
+  <div class="portfolio">
+    <div class="portfolio-mock">
       <a href="https://karlyweatherstein.github.io/best-furrends/">
         <!-- <img alt="best-furrends" src={BestFurrend}></img> -->
       </a>
     </div>
-    <div className="icon">
+    <div class="icon">
       <h2>Best Furrends</h2>
       <a href="https://github.com/Karlyweatherstein/best-furrends">
         <!-- <img src={Github} alt='Github' ></img> -->
@@ -61,13 +61,13 @@
     </div>
   </div>
   <!-- Horiseon -->
-  <div className="portfolio">
-    <div className="portfolio-mock">
+  <div class="portfolio">
+    <div class="portfolio-mock">
       <a href="https://karlyweatherstein.github.io/horiseon/">
         <!-- <img alt="Horiseon" src={Horiseon}></img> -->
       </a>
     </div>
-    <div className="icon">
+    <div class="icon">
       <h2>Horiseon</h2>
       <a href="https://github.com/Karlyweatherstein/horiseon">
         <!-- <img src={Github} alt='Github' ></img> -->
@@ -76,13 +76,13 @@
     </div>
   </div>
   <!-- Weather Dashboard  -->
-  <div className="portfolio">
-    <div className="portfolio-mock">
+  <div class="portfolio">
+    <div class="portfolio-mock">
       <a href="https://karlyweatherstein.github.io/weather-dashboard/">
         <!-- <img alt="Weather-dashboard" src={WeatherDashboard}></img> -->
       </a>
     </div>
-    <div className="icon">
+    <div class="icon">
       <h2>Weather Dashboard</h2>
       <a href="https://github.com/Karlyweatherstein/weather-dashboard/">
         <!-- <img src={Github} alt='Github' ></img> -->
