--- a/src/app/hero/hero.component.css
+++ b/src/app/hero/hero.component.css
@@ -1,5 +1,4 @@
 /* Hero */
-
 .heroDiv {
   display: flex;
   padding: 30px;
@@ -7,7 +6,6 @@
 }
 
 .heroText h1 {
-  background-color: #b3beb3;
   color: #242734;
   padding: 8px;
   line-height: 35px;
@@ -28,5 +26,5 @@
 }
 
 .profilePic img {
-  width: 60%;
+  width: 40px;
 }
