--- a/src/app/resume/resume.component.html
+++ b/src/app/resume/resume.component.html
@@ -1,12 +1,12 @@
-<div className="resume">
-  <h1 className="titles">Resume</h1>
+<div class="resume">
+  <h1 class="titles">Resume</h1>
   <a
     href="https://drive.google.com/uc?export=download&id=1-x9ojKlaYUUrDUJNLeVTxN8to79GCfvd"
     download="karly-weatherstein-resume"
   >
     <h2>Click this to download my resume!</h2>
   </a>
-  <h2 className="resume">Proficient in:</h2>
+  <h2 class="resume">Proficient in:</h2>
   <ul>
     <li>HTML</li>
     <li>CSS</li>
