--- a/src/app/hero/hero.component.css
+++ b/src/app/hero/hero.component.css
@@ -1,7 +1,7 @@
 /* Hero */
 .heroDiv {
   display: flex;
-  padding: 30px;
+  padding: 80px 30px;
   align-items: center;
 }
 
@@ -21,10 +21,13 @@
 }
 
 .profilePic {
-  text-align: right;
+  text-align: center;
   width: 60%;
 }
 
 .profilePic img {
-  width: 40px;
+  width: 45%;
+  border: 4px solid white;
+  border-radius: 5px;
+  transform: rotate(-4deg);
 }
