--- a/src/app/portfolio/portfolio.component.css
+++ b/src/app/portfolio/portfolio.component.css
@@ -24,9 +24,9 @@
 }
 
 .icon h2 {
-  background-color: #b3beb3;
+  background-color: #ae945c;
   width: fit-content;
-  color: #242734;
+  color: #000000;
   padding: 8px;
 }
 
