--- a/src/app/portfolio/portfolio.component.html
+++ b/src/app/portfolio/portfolio.component.html
@@ -1,10 +1,10 @@
 <div>
   <h1 class="titles">Portfolio</h1>
   <!-- Run Buddy -->
-  <div class="portfolio">
+  <div class="portfolio paragraph">
     <div class="portfolio-mock">
       <a href="https://karlyweatherstein.github.io/run-buddy/">
-        <!-- <img alt="Run-Buddy" src={RunBuddy}></img> -->
+        <img [src]="runBuddy" alt="runBuddy" />
       </a>
     </div>
     <div class="icon">
@@ -16,10 +16,10 @@
     </div>
   </div>
   <!-- Show Me How  -->
-  <div class="portfolio">
-    <div className="portfolio-mock">
+  <div class="portfolio paragraph">
+    <div class="portfolio-mock">
       <a href="https://boiling-fjord-93274.herokuapp.com/">
-        <!-- <img alt="Show-Me-How" src={ShowMeHow}></img> -->
+        <img [src]="showMeHow" alt="showMeHow" />
       </a>
     </div>
     <div class="icon">
@@ -31,10 +31,10 @@
     </div>
   </div>
   <!-- Password Generator  -->
-  <div class="portfolio">
+  <div class="portfolio paragraph">
     <div class="portfolio-mock">
       <a href="https://karlyweatherstein.github.io/password-generator/">
-        <!-- <img alt="Password-Generator" src={PasswordGenerator}></img> -->
+        <img [src]="passwordMockup" alt="passwordMockup" />
       </a>
     </div>
     <div class="icon">
@@ -46,10 +46,10 @@
     </div>
   </div>
   <!-- Best Furrrends  -->
-  <div class="portfolio">
+  <div class="portfolio paragraph">
     <div class="portfolio-mock">
       <a href="https://karlyweatherstein.github.io/best-furrends/">
-        <!-- <img alt="best-furrends" src={BestFurrend}></img> -->
+        <img [src]="bestFurrends" alt="bestFurrends" />
       </a>
     </div>
     <div class="icon">
@@ -61,10 +61,10 @@
     </div>
   </div>
   <!-- Horiseon -->
-  <div class="portfolio">
+  <div class="portfolio paragraph">
     <div class="portfolio-mock">
       <a href="https://karlyweatherstein.github.io/horiseon/">
-        <!-- <img alt="Horiseon" src={Horiseon}></img> -->
+        <img [src]="horiseon" alt="horiseon" />
       </a>
     </div>
     <div class="icon">
@@ -76,10 +76,10 @@
     </div>
   </div>
   <!-- Weather Dashboard  -->
-  <div class="portfolio">
+  <div class="portfolio paragraph">
     <div class="portfolio-mock">
       <a href="https://karlyweatherstein.github.io/weather-dashboard/">
-        <!-- <img alt="Weather-dashboard" src={WeatherDashboard}></img> -->
+        <img [src]="weatherDashboard" alt="weatherDashboard" />
       </a>
     </div>
     <div class="icon">
