--- a/src/app/about/about.component.css
+++ b/src/app/about/about.component.css
@@ -2,8 +2,8 @@
 
 .about-div {
   display: flex;
-  margin: 30px;
-  align-items: center;
+  margin: 40px 0 60px 0;
+  justify-content: center;
 }
 
 .about-div img {
@@ -12,8 +12,7 @@
 }
 
 .about-text {
-  text-align: left;
-  width: 50%;
+  width: 70%;
   padding: 15px;
   line-height: 32px;
   color: #7c8e97;
