--- a/src/app/nav/nav.component.html
+++ b/src/app/nav/nav.component.html
@@ -2,19 +2,21 @@
   <h1>Karly Weatherstein</h1>
   <ul>
     <li>
-      <a> Home </a>
+      <a href="/"> Home </a>
     </li>
     <li>
-      <a> About Me </a>
+      <a routerLink="/about"> About Me </a>
     </li>
     <li>
-      <a> Portfolio </a>
+      <a routerLink="/portfolio"> Portfolio </a>
     </li>
     <li>
-      <a> Contact </a>
+      <a routerLink="/contact"> Contact </a>
     </li>
     <li>
-      <a> Resume </a>
+      <a routerLink="/resume"> Resume </a>
     </li>
   </ul>
 </div>
+
+<router-outlet></router-outlet>
