--- a/src/app/hero/hero.component.css
+++ b/src/app/hero/hero.component.css
@@ -3,6 +3,7 @@
   display: flex;
   padding: 80px 30px;
   align-items: center;
+  margin: 0 0 100px 0;
 }
 
 .heroText h1 {
@@ -10,6 +11,7 @@
   padding: 8px;
   line-height: 35px;
   width: fit-content;
+  font-size: x-large;
 }
 
 .heroText {
@@ -18,6 +20,10 @@
   margin-right: 80px;
   padding-right: 30px;
   line-height: 22px;
+}
+
+.heroText p {
+  font-size: larger;
 }
 
 .profilePic {
